# prefect-modal-docker

./: .dockerignore  Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml  requirements.txt
.github/workflows/: prefect_cd.yml
prefect_modal/flows/: flow1.py
src/prefect_modal/flows/: flow1.py  flow2.py
